...
    <string name="cart_undo_title">"Product deleted!"</string>
    <string name="cart_undo_action_title">"UNDO"</string>
    <string name="shop_web_payment_dialog_title">"Are you sure?"</string>
    <string name="shop_web_payment_dialog_content">"Quitting this page will cancel the on-going purchase"</string>
    <string name="shop_web_payment_dialog_positive">"Yes"</string>
    <string name="shop_web_payment_dialog_negative">"No"</string>
    <string name="shop_points">"%s Points"</string>
    <string name="cart_use_smile_points">"Use my %s points (-%s)"</string>
    <string name="shipment_taxes_estimation">"Estimate your shipment and taxes"</string>
    <string name="shop_discount_amount">"Save %s"</string>
    <string name="checkout_toolbar_title">"Shopping Cart"</string>
    <string name="cart_tolbar_title">"my shopping cart"</string>
    <string name="form_shipping_city_hint">"City"</string>
...
    <string name="cart_proceed_payment">"Proceed to payment"</string>
    <string name="cart_empty_title">"your cart is empty"</string>
    <string name="cart_empty_subtitle">"Start browsing our shop, motivational message here"</string>
    <string name="cart_visit_shop">"Visit our shop"</string>
    <string name="cart_total_title">"estimated total"</string>
    <string name="cart_buy_another_method">"Use another payment method"</string>
    <string name="shop_discount_caption">"using our points at checkout!"</string>
    <string name="shop_no_products">"No products are available"</string>
    <string name="cart_smiles_discount_applied">"Points applied discount"</string>
    <string name="cart_sub_total">"Subtotal"</string>
    <string name="form_shipping_address_title">"Shipping address"</string>
    <string name="please_wait">"Please wait"</string>
    <string name="shipping_billing_title">"shipping and billing"</string>
    <string name="shop_web_payment_toolbar_title">"Checkout"</string>
...
    <string name="settings_rate_our_app">"Rate our app"</string>
    <string name="select_profile_header">"Who's brushing?"</string>
    <string name="select_profile_add_profile">"Add a profile"</string>
    <string name="select_profile_close">"Close"</string>
    <string name="settings_select_profile_title">"Who's brushing"</string>
    <string name="onboarding_sign_up_receive_promotions_updates">"Yes, I want to receive promotions and updates (optional)"</string>
    <string name="shop_tab_products">"Products"</string>
    <string name="shop_tab_brand_deals">"Brand Deals"</string>
    <string name="notifications_brushing_reminders_title">"Brushing reminders"</string>
    <string name="notifications_brushing_reminders_description">"Receive reminder notifications when it’s time to brush. You can set up to 3 daily notifications."</string>
    <string name="add_profile_add_a_photo">"Add a photo"</string>
    <string name="add_profile_birthday_title">"Date of birth"</string>
    <string name="add_profile_birthday_hint">"MM/YYYY"</string>
    <string name="add_profile_gender_title">"Gender"</string>
...
