...
      type="com.kolibree.android.shop.presentation.container.ShopContainerViewModel" />
  </data>

  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/discount_banner"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?colorSecondary"
    android:paddingStart="@dimen/dot_double"
    android:paddingTop="@dimen/dot"
    android:paddingEnd="@dimen/dot_double"
...
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/discount_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{@string/shop_discount_amount(viewModel.discountAmount)}"
        android:textAppearance="?textAppearanceSubtitle2"
        android:textColor="@color/white" />

...
