...
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/product_list_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/product_list"
      android:layout_width="match_parent"
      android:layout_height="@dimen/match_constraints"
      android:clipToPadding="false"
      android:visibility="invisible"
      app:adapter="@{viewModel.adapter}"
      app:diffConfig="@{viewModel.diffConfig}"
...
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:visibilityAnim="@{viewModel.productsResult == ProductsResult.ProductsAvailable ? View.VISIBLE : View.INVISIBLE}" />

    <include
      android:id="@+id/progress_bar"
      layout="@layout/view_progress_indicator"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
...
